Cleaned package.json files and added Catalan and Chinese (China)

--- a/app/translations/cs/package.json
+++ b/app/translations/cs/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Česky",
-    "direction": "ltr",
-    "author": "Jan Červinka <cervinkah@gmail.com>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
