--- a/app/translations/en/package.json
+++ b/app/translations/en/package.json
@@ -1,6 +1,4 @@
 {
     "title": "English",
-    "direction": "ltr",
-    "author": "Bastian Allgeier <bastian@getkirby.com>",
-    "version": "1.0.1"
+    "direction": "ltr"
 }
