--- a/app/translations/es_419/package.json
+++ b/app/translations/es_419/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Español (América Latina)&lrm;",
-    "direction": "ltr",
-    "author": "Iván Soria <invasoria@gmail.com>",
-    "version": "1.0.3"
+    "direction": "ltr"
 }
