--- a/app/translations/es_ES/package.json
+++ b/app/translations/es_ES/package.json
@@ -1,5 +1,4 @@
 {
     "title": "Español (España)",
-    "author": "Daniel Guillan <daniel.guillan@gmail.com>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
