--- a/app/translations/fa/package.json
+++ b/app/translations/fa/package.json
@@ -1,6 +1,4 @@
 {
     "title": "پارسی",
-    "direction": "rtl",
-    "author": "Mohammad Shiran <vbadvanced@gmail.com>",
-    "version": "1.0.0"
+    "direction": "rtl"
 }
