--- a/app/translations/fr/package.json
+++ b/app/translations/fr/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Français",
-    "direction": "ltr",
-    "author": "Philippe Gervaise & Aris Papathéodorou",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
