--- a/app/translations/hu/package.json
+++ b/app/translations/hu/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Hungarian",
-    "direction": "ltr",
-    "author": "Dávid Bóta <kukac7@gmail.com>",
-    "version": "0.0.1"
+    "direction": "ltr"
 }
