--- a/app/translations/id/package.json
+++ b/app/translations/id/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Bahasa Indonesia",
-    "direction": "ltr",
-    "author": "Justin Rahardjo <emailme@justinrahardjo.info>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
