--- a/app/translations/it/package.json
+++ b/app/translations/it/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Italiano",
-    "direction": "ltr",
-    "author": "mirco <e0ae240@gmail.com>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
