--- a/app/translations/pt_PT/package.json
+++ b/app/translations/pt_PT/package.json
@@ -1,5 +1,4 @@
 {
     "title": "Português (Portugal)",
-    "author": "Ricardo Quintas <rqcenter-web@yahoo.com>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
