--- a/app/translations/ro/package.json
+++ b/app/translations/ro/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Română",
-    "direction": "ltr",
-    "author": "Structor <zabamarza@yahoo.com>",
-    "version": "2.1.0"
+    "direction": "ltr"
 }
