--- a/app/translations/zh_TW/package.json
+++ b/app/translations/zh_TW/package.json
@@ -1,6 +1,4 @@
 {
     "title": "繁體中文（台灣）&lrm;",
-    "direction": "ltr",
-    "author": "fé Zhan <zhanafe@gmail.com>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
