--- a/app/translations/da/package.json
+++ b/app/translations/da/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Dansk",
-    "direction": "ltr",
-    "author": "Jimmy Rittenborg <jimmy@rittencom.dk>",
-    "version": "1.0.1"
+    "direction": "ltr"
 }
