--- a/app/translations/fi/package.json
+++ b/app/translations/fi/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Suomi",
-    "direction": "ltr",
-    "author": "Ilja Sillman <isillman@gmail.com>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
