--- a/app/translations/nb/package.json
+++ b/app/translations/nb/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Norsk Bokmål",
-    "direction": "ltr",
-    "author": "Ole-Martin Bratteng <ole-martin@bratteng.me>",
-    "version": "1.1.0"
+    "direction": "ltr"
 }
