--- a/app/translations/nl/package.json
+++ b/app/translations/nl/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Nederlands",
-    "direction": "ltr",
-    "author": "Donan Gallagher <donangallagher@gmail.com>, Rutger Laurman <info@lekkerduidelijk.nl> en Gerard Kleine Deters <gerard@kleinedeters.com>",
-    "version": "1.0.1"
+    "direction": "ltr"
 }
