--- a/app/translations/pl/package.json
+++ b/app/translations/pl/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Polski",
-    "direction": "ltr",
-    "author": "Piotr Świderek <piotrek@bardzofajny.net>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
