--- a/app/translations/pt_BR/package.json
+++ b/app/translations/pt_BR/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Português (Brasileiro)&lrm;",
-    "direction": "ltr",
-    "author": "Rhawbert Costa <rhawbert@gmail.com>",
-    "version": "1.0.0"
+    "direction": "ltr"
 }
