--- a/app/translations/ru/package.json
+++ b/app/translations/ru/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Русский (Russian)&lrm;",
-    "direction": "ltr",
-    "author": "Mike Sakhonenko <hello@imike.ru>",
-    "version": "1.0.2"
+    "direction": "ltr"
 }
