--- a/app/translations/sv_SE/package.json
+++ b/app/translations/sv_SE/package.json
@@ -1,6 +1,4 @@
 {
     "title": "Svenska",
-    "direction": "ltr",
-    "author": "Linus Stengård <linus_stengard@hotmail.com>, Andreas Nymark <andreas@nymark.me>",
-    "version": "1.1.0"
+    "direction": "ltr"
 }
