Added latest translation updates

--- a/app/translations/ar/core.json
+++ b/app/translations/ar/core.json
@@ -1,15 +1,15 @@
 {
     "cancel": "إلغاء",
     "add": "إضافة",
-    "addit": "Add & Edit",
+    "addit": "إضافة وتعديل",
     "save": "حفظ",
     "saved": "تم الحفظ!",
-    "change": "Change",
+    "change": "تغيير",
     "delete": "حذف",
     "insert": "إدراج",
     "ok": "موافق",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
+    "routes.error.invalid": "رابط غير صالح  للوحة التحكم",
+    "controller.error.invalid": "مراقب غير صالح",
     "controller.error.action": "Invalid action",
     "view.error.invalid": "Invalid view:",
     "options.show": "عرض الخيارات",
@@ -54,7 +54,7 @@
     "dashboard.index.license.title": "Kirby license",
     "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "متغيرات الموقع",
-    "metatags.info": "Kirby info",
+    "metatags.info": "معلومات عن Kirby ",
     "metatags.license": "Kirby license",
     "metatags.version.toolkit": "Toolkit version",
     "metatags.version.kirby": "Kirby version",
