--- a/app/translations/da/core.json
+++ b/app/translations/da/core.json
@@ -52,7 +52,7 @@
     "dashboard.index.history.title": "Dine seneste opdateringer",
     "dashboard.index.history.text": "Dine seneste opdaterede sider vil blive vist her, for at gøre det nemt at finde dem igen senere.",
     "dashboard.index.license.title": "Kirby licens",
-    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
+    "dashboard.index.license.text": "Det ser ud til at du kører Kirby på en offentlig server uden en gyldig licens!\n\nStøt venligst Kirby og (link: {buy} text: køb en licens nu)\n\nHar du allerede en licens nøgle, kan du blot tilføje den i din config fil: (link: {docs} text: site/config/config.php)",
     "metatags": "Website indstillinger",
     "metatags.info": "Kirby info",
     "metatags.license": "Kirby licens",
@@ -110,9 +110,9 @@
     "pages.toggle.error.error": "Status for fejl-siden kan ikke ændres",
     "pages.delete.headline": "Ønsker du virkelig at slette denne side?",
     "pages.delete.error.home.headline": "Forsiden kunne ikke slettes",
-    "pages.delete.error.home.text": "Du forsøger at slette forsiden. Dette er ikke muligt da det ville lede til et uønsket oplevelse.",
+    "pages.delete.error.home.text": "Du forsøger at slette forsiden. Dette er ikke muligt da det ville lede til en uønsket oplevelse.",
     "pages.delete.error.error.headline": "Fejlsiden kan ikke slettes",
-    "pages.delete.error.error.text": "Du forsøger at slette fejlsiden. Dette er ikke muligt da det ville lede til et uønsket oplevelse.",
+    "pages.delete.error.error.text": "Du forsøger at slette fejlsiden. Dette er ikke muligt da det ville lede til en uønsket oplevelse.",
     "pages.delete.error.children.headline": "Siden kan ikke slettes",
     "pages.delete.error.children.text": "Denne side har undersider og kan derfor ikke slettes. Slet venligst alle undersider først.",
     "pages.delete.error.blocked.headline": "Siden kan ikke slettes",
