--- a/app/translations/fa/core.json
+++ b/app/translations/fa/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "انصراف",
     "add": "افزودن",
-    "addit": "Add & Edit",
+    "addit": "اضافه کردن و ویرایش",
     "save": "ذخیره",
     "saved": "ذخیره شد!",
     "change": "اصلاح",
     "delete": "حذف",
     "insert": "درج",
     "ok": "تایید",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "آدرس ",
+    "controller.error.invalid": "کنترلر نامعتبر است",
+    "controller.error.action": "اقدام نامعتبر",
+    "view.error.invalid": "ویو نامعتبر است",
     "options.show": "نمایش گزینه ها",
     "options.hide": "پنهان کردن گزینه ها",
     "installation": "راه اندازی",
@@ -37,9 +37,9 @@
     "login.password.label": "گذرواژه",
     "login.error": "نام کاربری یا گذرواژه صحیح نیست",
     "login.button": "ورود",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "فایل تاریخچه ورود کاربران غیرقابل نوشتن است",
     "logout": "خروج",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "topbar برای کلاس تعریف نشده است:",
     "dashboard": "پیشخوان",
     "dashboard.index.pages.title": "صفحات",
     "dashboard.index.pages.edit": "ویرایش",
@@ -52,7 +52,7 @@
     "dashboard.index.history.title": "آخرین بروزرسانی ها",
     "dashboard.index.history.text": "آخرین صفحاتی که تغییر داده اید در این مکان جهت سهولت دسترسی نمایش داده خواهد شد.",
     "dashboard.index.license.title": "مجوز نرم افزار",
-    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
+    "dashboard.index.license.text": "به نظر می‌رسد در حال اجرای کربی در یک سرور عمومی بدون یک مجوز معتبر هستید!\n\nلطفا پشتیبان کربی باشید و  (link: {buy} text: همین حالا یک مجوز خریداری کنید)\n\nاگر در حال حاضر دارای یک کلید مجوز هستید، کافی است آن را به فایل پیکربندی خود اضافه کنید:  (link: {docs} text: site/config/config.php)",
     "metatags": "تنظیمات سایت",
     "metatags.info": "اطلاعات نرم افزار",
     "metatags.license": "مجوز",
@@ -61,7 +61,7 @@
     "metatags.version.panel": "نسخه پنل مدیریت",
     "metatags.back": "بازگشت به پیشخوان",
     "metatags.files": "فایل های عمومی",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "حذف سایت ممکن نیست",
     "pages.show.settings": "تنظیمات صفحه",
     "pages.show.preview": "پیش نمایش",
     "pages.show.changeurl": "تغییر نشانی اینترنتی صفحه",
@@ -81,7 +81,7 @@
     "pages.show.error.permissions.title": "صفحه قابل نوشتن نیست",
     "pages.show.error.permissions.text": "لطفا دسترسی پوشه محتوا و تمام فایل ها را بررسی نمایید.",
     "pages.show.error.permissions.retry": "تلاش مجدد",
-    "pages.show.error.notitle.title": "طرح فیلد عنوان ندارد.",
+    "pages.show.error.notitle.title": "طرح الگو فیلد عنوان ندارد.",
     "pages.show.error.notitle.text": "لطفا یک فیلد عنوان اضافه کنید و دوباره سعی کنید",
     "pages.show.error.notitle.retry": "تلاش مجدد",
     "pages.show.error.form": "لطفا همه فیلدها را به درستی پر نمایید",
@@ -92,7 +92,7 @@
     "pages.add.url.close": "بستن",
     "pages.add.url.help": "Format: lowercase a-z, 0-9 and regular dashes",
     "pages.add.template.label": "قالب صفحه",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "صفحه ایجاد نشد",
     "pages.add.error.title": "عنوان وارد نشده است",
     "pages.add.error.template": "فالب وارد نشده است.",
     "pages.add.error.max.headline": "ساخت صفحه جدید ممکن نیست",
@@ -101,13 +101,13 @@
     "pages.url.uid.label.option": "ایجاد از روی عنوان",
     "pages.url.error.exists": "یک صفحه با پیوست مشابه در حال حاضر وجود دارد",
     "pages.url.error.move": "پیوست تغییر نکرد",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
+    "pages.url.error.rights": "شما امکان تغییر آدرس این صفحه را ندارید",
+    "pages.url.home.error.error": "آدرس صفحه اصلی و صفحه خطا غیر قابل تغییر است",
+    "pages.toggle.position": "موقعیت",
+    "pages.toggle.invisible": "مخفی",
     "pages.toggle.publish": "آیااز تغییر وضعیت صفحه به **قابل مشاهده** مطمئن هستید؟",
     "pages.toggle.hide": "آیااز تغییر وضعیت صفحه به **مخفی** مطمئن هستید؟",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.error.error": "وضعیت صفحه خطا قابل تغییر نیست",
     "pages.delete.headline": "صفحه جاری حذف شود؟",
     "pages.delete.error.home.headline": "صفحه اصلی وب سایت نمی تواند حذف شود",
     "pages.delete.error.home.text": "شما در حال تلاش برای حذف صفحه اصلی هستید. این امکان پذیر نمی باشد و به اثرات ناخواسته منجر می شود.",
@@ -130,8 +130,8 @@
     "subpages.index.visible.help": "صفحات مخفی را جهت مرتب سازی و آشکارسازی به اینجا بکشید.",
     "subpages.index.invisible": "صفحات مخفی",
     "subpages.index.invisible.help": "صفحات آشکار را جهت مخفی کردن به اینجا بکشید.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "این صفحه نمی‌تواند دارای صفحات فرعی باشد",
+    "subpages.add.error.more": "ایجاد صفحات فرعی بیشتر ممکن نیست",
     "subpages.error.missing": "صفحه مورد نظر پیدا نشد.",
     "files": "فایل ها",
     "files.index.headline": "فایل های مرتبط با",
@@ -141,15 +141,15 @@
     "files.index.upload.first.button": "آپلود نخستین فایل",
     "files.index.edit": "ویرایش",
     "files.index.delete": "حذف",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "این صفحه نمی‌تواند دارای فایل باشد",
+    "files.add.error.max": "محدودیت حداکثر تعداد فایل برای صفحه فعلی سر رسیده است.",
+    "files.add.error.extension.missing": "شما نمی‌توانید فایل‌های بدون پسوند را آپلود کنید",
+    "files.add.error.extension.forbidden": "پسوند فایل غیرمجاز است",
+    "files.add.error.mime.forbidden": "فرمت فایل غیرمجاز است",
+    "files.add.error.htaccess": "امکان آپلود فایل htaccess وجود ندارد",
+    "files.add.error.invisible": "امکان آپلود فایلهای مخفی وجود ندارد",
+    "files.add.blueprint.type.error": "صفحه تنها اجازه می‌دهد که:",
+    "files.add.blueprint.size.error": "سایز فایل مجاز برای صفحه",
     "files.show.name.label": "نام فایل",
     "files.show.info.label": "نوع / حجم / ابعاد",
     "files.show.link.label": "لینک عمومی",
@@ -174,7 +174,7 @@
     "users.index.delete": "حذف",
     "users.form.username.label": "نام کاربری",
     "users.form.username.placeholder": "نام کاربری شما",
-    "users.form.username.help": "Allowed characters: lowercase a-z, 0-9 and dashes",
+    "users.form.username.help": "حروف مجاز: حروف کوچک a-z، اعداد 0-9 و خط تیره -",
     "users.form.username.readonly": "نام کاربری را نمیتوان تغییر داد",
     "users.form.firstname.label": "نام",
     "users.form.lastname.label": "نام خانوادگی",
@@ -197,29 +197,29 @@
     "users.form.back": "بازگشت به لیست کاربران",
     "users.form.error.password.confirm": "لطفا تکرار گذرواژه را وارد نمایید",
     "users.form.error.update": "کاربر نمی تواند به روز شود",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "شما اجازه بروزرسانی این کاربر را ندارید",
     "users.form.error.create": "کاربر نمی تواند ایجاد شود",
     "users.form.error.permissions.title": "پوشه account قابل نوشتن نیست",
     "users.form.error.permissions.text": "لطفا مطمئن شوید که /site/accounts موجود و قابل نوشتن است.",
     "users.delete.headline": "کاربر جاری حذف شود؟",
     "users.delete.error": "کاربر نمی تواند حذف شود",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "شما اجازه  حذف کاربران را ندارید",
+    "users.delete.error.permission.single": "شما اجازه حذف این کاربر را ندارید",
+    "users.delete.error.lastadmin": "حذف آخرین مدیر سیستم ممکن نیست",
     "users.avatar.drop": "تصویر پروفایل را اینجا رها کنید…",
     "users.avatar.click": "یا برای انتخاب و آپلود کلیک کنید",
-    "users.avatar.error.type": "شما فقط می توانید فایل های JPG، PNG و GIF آپلود کن",
+    "users.avatar.error.type": "شما فقط می توانید فایل های JPG، PNG و GIF آپلود کنید",
     "users.avatar.error.folder.headline": "پوشه avatar قایل نوشتن نیست",
-    "users.avatar.error.folder.text": "جهت آپلود تصویر پروفایل پوشه <strong>/assets/avatars</strong> را ایجاد و آنرا قایل نوشتن کنید.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.folder.text": "جهت آپلود تصویر پروفایل پوشه <strong>/assets/avatars</strong> را ایجاد و آن را قابل نوشتن کنید.",
+    "users.avatar.error.permission": "شما اجازه تغییر تصویر پروفایل را ندارید",
     "users.avatar.delete.error": "تصویر پروفایل را نمیتوان حذف کرد",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "شما اجازه حذف تصویر پروفایل این کاربر را ندارید",
     "users.avatar.delete.success": "تصویر پروفایل حذف شد",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "فاقد تصویر پروفایل",
     "users.error.missing": "کاربر مورد نظر پیدا نشد",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "شما تنها کاربر مدیر این سیستم هستید و تغییر آن ممکن نیست",
+    "form.error.missing": "فرم یافت نشد",
+    "form.construct.error.invalid": "روال ساخت فرم نامعتبر است",
     "fields.required": "اجباری",
     "fields.date.label": "تاریخ",
     "fields.date.months": [
@@ -264,12 +264,12 @@
     "fields.structure.add": "افزودن",
     "fields.structure.add.first": "افزودن نخستین مورد",
     "fields.structure.empty": "موردی وجود ندارد.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "آیتم یافت نشد",
     "fields.structure.cancel": "انصراف",
     "fields.structure.save": "تایید",
     "fields.structure.edit": "ویرایش",
     "fields.structure.delete": "حذف",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "مدخل جاری حذف شود؟",
     "fields.tags.label": "برچسب ها",
     "fields.tel.label": "تلفن",
     "fields.textarea.buttons.bold.label": "متن با حروف درشت",
@@ -284,10 +284,10 @@
     "fields.toggle.no": "خیر",
     "fields.toggle.on": "روشن",
     "fields.toggle.off": "خاموش",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "فایل کنترلر فیلد یافت نشد",
+    "fields.error.missing.class": "کلاس کنترلر فیلد سافت نشد",
+    "fields.error.route.invalid": "مسید فیلد نامعتبر است",
+    "fields.error.extended": "توسعه فیلد ممکن نیست",
     "editor.link.url.label": "آدرس پیوند",
     "editor.link.text.label": "متن پیوند",
     "editor.link.text.help": "متن پیوند اختیاری است",
@@ -297,8 +297,8 @@
     "editor.email.text.help": "متن پیوند اختیاری است",
     "editor.file.empty": "این صفحه فاقد فایل است",
     "editor.image.empty": "این صفحه فاقد تصویر است",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "روال تکمیل خودکار معتبر نیست",
+    "blueprints.error.default.missing": "طرح الگوی پیش‌فرض یافت نشد",
     "error": "خطا",
     "error.headline": "خطا"
 }
