--- a/app/translations/sv_SE/core.json
+++ b/app/translations/sv_SE/core.json
@@ -197,29 +197,29 @@
     "users.form.back": "Tillbaka till användare",
     "users.form.error.password.confirm": "Vänlig bekräfta ditt lösenord",
     "users.form.error.update": "Användaren kan ej uppdateras",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Du får inte uppdatera den här användaren",
     "users.form.error.create": "Användaren kan ej skapas",
     "users.form.error.permissions.title": "Mappen är ej skrivbar",
     "users.form.error.permissions.text": "Var vänlig och kontroller att mappen <strong>sites/accounts</strong> existerar och har skrivrättigheter.",
     "users.delete.headline": "Vill du verkligen radera användaren?",
     "users.delete.error": "Användaren kan ej raderas",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Du får inte radera användare",
+    "users.delete.error.permission.single": "Du får inte radera den här användaren",
+    "users.delete.error.lastadmin": "Du kan inte radera sista administratören",
     "users.avatar.drop": "Släpp en profilbild här…",
     "users.avatar.click": "…eller klicka för att ladda upp",
     "users.avatar.error.type": "Du kan bara ladda upp bilder i följande filformat: JPG, PNG och GIF",
     "users.avatar.error.folder.headline": "avatar-mappen är inte skrivbar",
     "users.avatar.error.folder.text": "Var vänlig och kontrollera att mappen <strong>/assets/avatars</strong> existerar och har skrivrättigheter för att kunna ladda upp profilbilder.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Du får inte ändra avataren",
     "users.avatar.delete.error": "Profilbilden kan ej raderas",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Du får inte radera avataren för den här användaren",
     "users.avatar.delete.success": "Profilbilden har raderas",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Den här användare saknar avatar",
     "users.error.missing": "Användaren kan ej hittas",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Du är ensam administratör. Det går inte att ändra.",
+    "form.error.missing": "Formuläret kan ej hittas",
+    "form.construct.error.invalid": "Ogiltig metod för konstruktion av formulär",
     "fields.required": "Ifyllt fält krävs.",
     "fields.date.label": "Datum",
     "fields.date.months": [
@@ -264,12 +264,12 @@
     "fields.structure.add": "Lägg till",
     "fields.structure.add.first": "Lägg till första posten",
     "fields.structure.empty": "Inga poster än.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Artikeln kunde inte hittas",
     "fields.structure.cancel": "Avbryt",
     "fields.structure.save": "Spara",
     "fields.structure.edit": "Ändra",
     "fields.structure.delete": "Radera",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Vill du verkligen radera den här posten?",
     "fields.tags.label": "Taggar",
     "fields.tel.label": "Telefon",
     "fields.textarea.buttons.bold.label": "Fet text",
@@ -284,10 +284,10 @@
     "fields.toggle.no": "Nej",
     "fields.toggle.on": "På",
     "fields.toggle.off": "Av",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
+    "fields.error.missing.controller": "Filen för fältkontroll saknas",
+    "fields.error.missing.class": "Klassen för fältkontroll saknas",
     "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.extended": "Fältet kan inte förlängas",
     "editor.link.url.label": "Lägg till webbadress",
     "editor.link.text.label": "Länktext",
     "editor.link.text.help": "Länktext är frivillig",
@@ -297,8 +297,8 @@
     "editor.email.text.help": "Länktext är frivillig",
     "editor.file.empty": "Den här sidan saknar filer",
     "editor.image.empty": "Den här sidan saknar bilder",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Ogiltig metod för automatisk komplettering",
+    "blueprints.error.default.missing": "Standard-blueprint saknas",
     "error": "Fel",
     "error.headline": "Error"
 }
