--- a/app/translations/zh_CN/core.json
+++ b/app/translations/zh_CN/core.json
@@ -10,15 +10,15 @@
     "ok": "确认",
     "routes.error.invalid": "无效的控制面板URL",
     "controller.error.invalid": "无效的控制器",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "controller.error.action": "无效行为",
+    "view.error.invalid": "无效视图：",
     "options.show": "显示选项",
     "options.hide": "隐藏选项",
     "installation": "安装",
     "installation.check.headline": "安装Kirby控制面板",
     "installation.check.text": "Kirby在安装过程中遇到以下问题...",
     "installation.check.retry": "重试",
-    "installation.check.error": "There are some issues!",
+    "installation.check.error": "存在一些问题！",
     "installation.check.error.accounts": "/site/accounts不可写入",
     "installation.check.error.avatars": "/assets/avatars不可写入",
     "installation.check.error.blueprints": "请新增/site/blueprints文件夹",
@@ -81,13 +81,13 @@
     "pages.show.error.permissions.title": "此页面不可写入",
     "pages.show.error.permissions.text": "请检查content文件夹和所有文件的修改权限",
     "pages.show.error.permissions.retry": "重试",
-    "pages.show.error.notitle.title": "The blueprint does not have a title field",
+    "pages.show.error.notitle.title": "该blueprint没有标题栏",
     "pages.show.error.notitle.text": "请新增标题栏并重试",
     "pages.show.error.notitle.retry": "重试",
     "pages.show.error.form": "请正确填写所有栏",
     "pages.add.title.label": "新增页面",
     "pages.add.title.placeholder": "标题",
-    "pages.add.url.label": "URL-appendix",
+    "pages.add.url.label": "URL后缀",
     "pages.add.url.enter": "(输入标题)",
     "pages.add.url.close": "关闭",
     "pages.add.url.help": "格式要求：小写字母a-z、数字0-9及连字符-",
@@ -95,12 +95,12 @@
     "pages.add.error.create": "无法新增页面",
     "pages.add.error.title": "标题缺失",
     "pages.add.error.template": "模版缺失",
-    "pages.add.error.max.headline": "No new pages allowed",
+    "pages.add.error.max.headline": "新页面不允许被创建",
     "pages.add.error.max.text": "当前页面的子页面数量已达上限",
-    "pages.url.uid.label": "URL-appendix",
+    "pages.url.uid.label": "URL后缀",
     "pages.url.uid.label.option": "从标题创建",
-    "pages.url.error.exists": "A page with the same appendix already exists",
-    "pages.url.error.move": "The appendix could not be changed",
+    "pages.url.error.exists": "含有相同后缀的页面已存在",
+    "pages.url.error.move": "该后缀不能被修改",
     "pages.url.error.rights": "您不能更改该页面的URL",
     "pages.url.home.error.error": "home页面和error页面的URL不能更改",
     "pages.toggle.position": "位置",
@@ -118,7 +118,7 @@
     "pages.delete.error.blocked.headline": "该页面不能删除",
     "pages.delete.error.blocked.text": "该页面已锁定，不可删除",
     "pages.search.help": "Search pages by URL. Navigate through search results with your up and down arrow keys and hit enter to jump to the selected page.",
-    "pages.search.noresults": "There are no search results for your query. Please try again with a different URL.",
+    "pages.search.noresults": "当前请求没有搜索结果。请重试。",
     "pages.error.missing": "该页面找不到",
     "subpages": "页面",
     "subpages.index.headline": "Pages in",
@@ -127,10 +127,10 @@
     "subpages.index.add.first.text": "该页面还没有子页面",
     "subpages.index.add.first.button": "添加首个页面",
     "subpages.index.visible": "可见页面",
-    "subpages.index.visible.help": "Drag invisible pages here to sort them/make them visible.",
+    "subpages.index.visible.help": "拖拽隐藏页面到这里以排序/使其可见",
     "subpages.index.invisible": "隐藏页面",
     "subpages.index.invisible.help": "Drag visible pages here to unsort them/make them invisible.",
-    "subpages.add.error": "This page is not allowed to have subpages",
+    "subpages.add.error": "该页面没有拥有子页面权限",
     "subpages.add.error.more": "This page cannot have any more subpages",
     "subpages.error.missing": "该页面找不到",
     "files": "文件",
@@ -141,17 +141,17 @@
     "files.index.upload.first.button": "上传首份文件",
     "files.index.edit": "编辑",
     "files.index.delete": "删除",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
+    "files.index.error.disabled": "该页面不允许包含任何文件",
+    "files.add.error.max": "当前页面的文件数量已达上限",
+    "files.add.error.extension.missing": "您不可上传没有扩展名的文件",
+    "files.add.error.extension.forbidden": "禁用文件扩展名",
+    "files.add.error.mime.forbidden": "禁用MIME类型",
+    "files.add.error.htaccess": "htaccess文件不能被上传",
+    "files.add.error.invisible": "隐藏页面不能被上传",
     "files.add.blueprint.type.error": "该页只允许：",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.add.blueprint.size.error": "页面只允许文件大小为",
     "files.show.name.label": "文件名",
-    "files.show.info.label": "Type / Size / Dimensions",
+    "files.show.info.label": "类型/大小/尺寸",
     "files.show.link.label": "公共链接",
     "files.show.open": "显示/下载文件",
     "files.show.back": "返回",
@@ -184,7 +184,7 @@
     "users.form.password.confirm.label": "确认密码",
     "users.form.password.new.label": "新密码",
     "users.form.password.new.confirm.label": "确认新密码",
-    "users.form.password.new.help": "Leave blank to keep the current password",
+    "users.form.password.new.help": "保留此处空白以保留当前密码",
     "users.form.language.label": "语言",
     "users.form.role.label": "角色",
     "users.form.options.headline": "账户选项",
@@ -194,7 +194,7 @@
     "users.form.avatar.upload": "Upload profile picture",
     "users.form.avatar.replace": "Replace profile picture",
     "users.form.avatar.delete": "Delete profile picture",
-    "users.form.back": "Back to users",
+    "users.form.back": "回到用户",
     "users.form.error.password.confirm": "请核实密码",
     "users.form.error.update": "无法更新该用户",
     "users.form.error.update.rights": "您没有更新该用户权限",
@@ -205,22 +205,22 @@
     "users.delete.error": "该用户无法删除",
     "users.delete.error.permission": "您没有删除用户权限",
     "users.delete.error.permission.single": "您没有删除该用户权限",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.lastadmin": "您不能删除仅有的admin账户",
     "users.avatar.drop": "Drop a profile picture here…",
     "users.avatar.click": "或点击来上传",
     "users.avatar.error.type": "只能上传JPG、PNG或GIF格式文件",
     "users.avatar.error.folder.headline": "avatar文件夹不可写入",
     "users.avatar.error.folder.text": "Please create the folder <strong>/assets/avatars</strong> and make it writable to upload profile pictures.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "您没有修改头像的权限",
     "users.avatar.delete.error": "The profile picture could not be deleted",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "您没有删除这个用户头像的权限",
     "users.avatar.delete.success": "The profile picture has been deleted",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "该用户没有头像",
     "users.error.missing": "该用户找不到",
     "user.error.lastadmin": "You are the only admin. This cannot be changed.",
     "form.error.missing": "The form cannot be found",
     "form.construct.error.invalid": "Invalid form construction method",
-    "fields.required": "Required",
+    "fields.required": "必填",
     "fields.date.label": "日期",
     "fields.date.months": [
         "一月",
@@ -297,8 +297,8 @@
     "editor.email.text.help": "链接文本可选",
     "editor.file.empty": "该页面没有文件",
     "editor.image.empty": "该页没有图像",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "无效的自动完成方法",
+    "blueprints.error.default.missing": "默认blueprint缺失",
     "error": "错误",
     "error.headline": "错误"
 }
