Updated pt_PT translation

--- a/app/translations/pt_PT/core.json
+++ b/app/translations/pt_PT/core.json
@@ -22,7 +22,7 @@
     "installation.check.error.accounts": "/site/accounts não tem permissão de escrita",
     "installation.check.error.avatars": "/assets/avatars não tem permissão de escrita",
     "installation.check.error.blueprints": "Por favor, adiciona uma pasta /site/blueprints",
-    "installation.check.error.content": "A pasta \"content\" e todas subpastas e ficheiros devem ter permissão de escrita.",
+    "installation.check.error.content": "A pasta \"content\" e todas as subpastas e ficheiros devem ter permissão de escrita.",
     "installation.check.error.thumbs": "A pasta \"thumbs\" deve ter permissão de escrita.",
     "installation.signup.username.label": "Cria a tua primeira conta",
     "installation.signup.username.placeholder": "Utilizador",
@@ -52,7 +52,7 @@
     "dashboard.index.history.title": "Atualizações recentes",
     "dashboard.index.history.text": "As últimas páginas modificadas por ti serão exibidas aqui para facilitar a sua consulta no futuro.",
     "dashboard.index.license.title": "Licença Kirby",
-    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
+    "dashboard.index.license.text": "Aparentemente estas a executar Kirby num servidor público sem licença válida!\n\nPor favor apoia Kirby e (link: {compra} text: adquira agóra uma licença)\n\nSe já adquiriste uma licença, simplesmente adiciona-a ao teu ficheiro de configuração: (link: {docs} text: site/config/config.php)",
     "metatags": "Variáveis do site",
     "metatags.info": "Informação Kirby",
     "metatags.license": "Licença Kirby",
