--- a/app/translations/id/core.json
+++ b/app/translations/id/core.json
@@ -1,7 +1,7 @@
 {
     "cancel": "Batal",
     "add": "Tambah",
-    "addit": "Add & Edit",
+    "addit": "Tambah & Sunting",
     "save": "Simpan",
     "saved": "Telah disimpan!",
     "change": "Change",
@@ -25,7 +25,7 @@
     "installation.check.error.content": "The content folder and all contained files and folders must be writable.",
     "installation.check.error.thumbs": "The thumbs folder must be writable.",
     "installation.signup.username.label": "Buatlah akun pertama anda",
-    "installation.signup.username.placeholder": "Nama akun",
+    "installation.signup.username.placeholder": "Nama pengguna",
     "installation.signup.email.label": "Email",
     "installation.signup.email.placeholder": "email@contohemail.com",
     "installation.signup.password.label": "Kata sandi",
@@ -33,7 +33,7 @@
     "installation.signup.button": "Buatlah akun anda",
     "login": "Masuk",
     "login.welcome": "Silakan masuk dengan akun anda",
-    "login.username.label": "Nama akun",
+    "login.username.label": "Nama pengguna",
     "login.password.label": "Kata sandi",
     "login.error": "Kata sandi atau username anda tidak terdaftar",
     "login.button": "Masuk",
@@ -42,31 +42,31 @@
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Halaman",
-    "dashboard.index.pages.edit": "Edit",
+    "dashboard.index.pages.edit": "Sunting",
     "dashboard.index.pages.add": "Tambah",
     "dashboard.index.site.title": "URL situs anda",
     "dashboard.index.account.title": "Akun anda",
-    "dashboard.index.account.edit": "Edit",
+    "dashboard.index.account.edit": "Sunting",
     "dashboard.index.metatags.title": "Variabel situs",
-    "dashboard.index.metatags.edit": "Edit",
+    "dashboard.index.metatags.edit": "Sunting",
     "dashboard.index.history.title": "Update terakhir anda",
     "dashboard.index.history.text": "Halaman terakhir yang anda ubah akan ditampilkan di sini supaya mudah untuk menemukannya lagi.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Lisensi Kirby",
     "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "Variabel situs",
-    "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.info": "Info Kirby",
+    "metatags.license": "Lisensi Kirby",
+    "metatags.version.toolkit": "Versi Toolkit",
+    "metatags.version.kirby": "Versi Kirby",
+    "metatags.version.panel": "Versi Panel",
     "metatags.back": "Kembali ke dashboard",
     "metatags.files": "Site files",
     "site.delete.error": "The site cannot be deleted",
     "pages.show.settings": "Pengaturan halaman",
     "pages.show.preview": "Buka pratinjau",
     "pages.show.changeurl": "Ganti URL",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
+    "pages.show.invisible": "Status: tak terlihat",
+    "pages.show.visible": "Status: terlihat",
     "pages.show.changes.text": "You have unsaved changes!",
     "pages.show.changes.button": "Discard",
     "pages.show.delete": "Hapus halaman ini",
@@ -75,7 +75,7 @@
     "pages.show.subpages.add": "Tambah",
     "pages.show.subpages.empty": "Halaman ini tidak memiliki sub-halaman",
     "pages.show.files.title": "Berkas",
-    "pages.show.files.edit": "Edit",
+    "pages.show.files.edit": "Sunting",
     "pages.show.files.add": "Tambah",
     "pages.show.files.empty": "Halaman ini tidak memiliki berkas",
     "pages.show.error.permissions.title": "Halaman ini tidak bisa diedit",
@@ -86,14 +86,14 @@
     "pages.show.error.notitle.retry": "Coba lagi",
     "pages.show.error.form": "Tolong isi semua bidang dengan benar",
     "pages.add.title.label": "Tambah halaman baru",
-    "pages.add.title.placeholder": "Title",
+    "pages.add.title.placeholder": "Judul",
     "pages.add.url.label": "URL-lampiran",
-    "pages.add.url.enter": "(masukkan title anda)",
+    "pages.add.url.enter": "(masukkan judul anda)",
     "pages.add.url.close": "Tutup",
     "pages.add.url.help": "Format: huruf kecil a-z, 0-9 dan regular dashes",
     "pages.add.template.label": "Template",
-    "pages.add.error.create": "The page could not be created",
-    "pages.add.error.title": "Title tidak ditemukan",
+    "pages.add.error.create": "Halaman tidak dapat dibuat",
+    "pages.add.error.title": "Judul tidak ditemukan",
     "pages.add.error.template": "Template tidak ditemukan",
     "pages.add.error.max.headline": "Halaman baru tidak diperbolehkan",
     "pages.add.error.max.text": "Jumlah maksimum sub-halaman telah tercapai.",
@@ -104,7 +104,7 @@
     "pages.url.error.rights": "You cannot change the URL of this page",
     "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
     "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
+    "pages.toggle.invisible": "Status: tak terlihat",
     "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
     "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
     "pages.toggle.error.error": "The status of the error page cannot be changed",
@@ -133,13 +133,13 @@
     "subpages.add.error": "This page is not allowed to have subpages",
     "subpages.add.error.more": "This page cannot have any more subpages",
     "subpages.error.missing": "Halaman tidak bisa ditemukan",
-    "files": "File",
-    "files.index.headline": "File untuk",
+    "files": "Berkas",
+    "files.index.headline": "Berkas untuk",
     "files.index.back": "Kembali",
-    "files.index.upload": "Upload file baru",
-    "files.index.upload.first.text": "Halaman ini belum memiliki file",
-    "files.index.upload.first.button": "Upload file pertama",
-    "files.index.edit": "Edit",
+    "files.index.upload": "Unggah berkas baru",
+    "files.index.upload.first.text": "Halaman ini belum memiliki berkas",
+    "files.index.upload.first.button": "Unggah berkas pertama",
+    "files.index.edit": "Sunting",
     "files.index.delete": "Hapus",
     "files.index.error.disabled": "The page is not allowed to have any files",
     "files.add.error.max": "The maximum number of files for the current page has been reached.",
@@ -150,27 +150,27 @@
     "files.add.error.invisible": "Invisible files cannot be uploaded",
     "files.add.blueprint.type.error": "Page only allows:",
     "files.add.blueprint.size.error": "Page only allows file size of",
-    "files.show.name.label": "Nama file",
-    "files.show.info.label": "Tipe / Ukuran",
+    "files.show.name.label": "Nama berkas",
+    "files.show.info.label": "Tipe / Ukuran / Dimensi",
     "files.show.link.label": "Link publik",
     "files.show.open": "Tampilkan atau download file",
     "files.show.back": "Kembali",
     "files.show.replace": "Ganti",
     "files.show.delete": "Hapus",
-    "files.show.error.rename": "Nama file tidak bisa diganti",
+    "files.show.error.rename": "Nama berkas tidak bisa diganti",
     "files.show.error.form": "Tolong isi semua bidang dengan benar",
     "files.upload.drop": "Drop file disini…",
     "files.upload.click": "…atau tekan untuk meng-upload",
     "files.replace.drop": "Drop file disini…",
     "files.replace.click": "…atau tekan untuk mengganti",
-    "files.replace.error.type": "File yang di-upload harus memiliki tipe yang sama.",
+    "files.replace.error.type": "Berkas yang diunggah harus memiliki tipe yang sama.",
     "files.delete.headline": "Apakah anda benar-benar mau menghapus file ini?",
     "files.error.missing.page": "Halaman tidak bisa ditemukan",
     "files.error.missing.file": "File tidak bisa ditemukan",
     "users": "Pengguna",
     "users.index.headline": "Semua pengguna",
     "users.index.add": "Tambah pengguna baru",
-    "users.index.edit": "Edit",
+    "users.index.edit": "Sunting",
     "users.index.delete": "Hapus",
     "users.form.username.label": "Nama pengguna",
     "users.form.username.placeholder": "Nama pengguna anda",
@@ -190,10 +190,10 @@
     "users.form.options.headline": "Opsi akun",
     "users.form.options.message": "Kirim email",
     "users.form.options.delete": "Hapus akun",
-    "users.form.avatar.headline": "Profil foto",
-    "users.form.avatar.upload": "Upload profil foto",
-    "users.form.avatar.replace": "Ganti profil foto",
-    "users.form.avatar.delete": "Hapus profil foto",
+    "users.form.avatar.headline": "Gambar profil",
+    "users.form.avatar.upload": "Unggah gambar profil",
+    "users.form.avatar.replace": "Ganti gambar profil",
+    "users.form.avatar.delete": "Hapus gambar profil",
     "users.form.back": "Kembali ke pengguna",
     "users.form.error.password.confirm": "Tolong konfirmasi kata sandi",
     "users.form.error.update": "Pengguna tidak bisa di-update",
@@ -223,7 +223,7 @@
     "fields.required": "Diperlukan",
     "fields.date.label": "Tanggal",
     "fields.date.months": [
-        "January",
+        "Januari",
         "Februari",
         "Maret",
         "April",
@@ -260,26 +260,26 @@
     "fields.number.placeholder": "#",
     "fields.page.label": "Halaman",
     "fields.page.placeholder": "path/ke/halaman",
-    "fields.password.label": "Sandi",
+    "fields.password.label": "Kata sandi",
     "fields.structure.add": "Tambah",
     "fields.structure.add.first": "Tambahkan entri pertama",
     "fields.structure.empty": "Belum ada entri",
     "fields.structure.entry.error": "The item could not be found",
     "fields.structure.cancel": "Batal",
     "fields.structure.save": "Simpan",
-    "fields.structure.edit": "Edit",
+    "fields.structure.edit": "Sunting",
     "fields.structure.delete": "Hapus",
     "fields.structure.delete.label": "Do you really want to delete this entry?",
     "fields.tags.label": "Tags",
     "fields.tel.label": "Telepon",
-    "fields.textarea.buttons.bold.label": "Bold text",
-    "fields.textarea.buttons.bold.text": "Bold text",
-    "fields.textarea.buttons.italic.label": "Italic text",
-    "fields.textarea.buttons.italic.text": "Italic text",
+    "fields.textarea.buttons.bold.label": "Teks tebal",
+    "fields.textarea.buttons.bold.text": "Teks tebal",
+    "fields.textarea.buttons.italic.label": "Teks miring",
+    "fields.textarea.buttons.italic.text": "Teks miring",
     "fields.textarea.buttons.link.label": "Link",
     "fields.textarea.buttons.email.label": "Email",
     "fields.textarea.buttons.image.label": "Gambar",
-    "fields.textarea.buttons.file.label": "File",
+    "fields.textarea.buttons.file.label": "Berkas",
     "fields.toggle.yes": "Ya",
     "fields.toggle.no": "Tidak",
     "fields.toggle.on": "On",
