Updated swedish translation

--- a/app/translations/sv_SE/core.json
+++ b/app/translations/sv_SE/core.json
@@ -61,7 +61,7 @@
     "metatags.version.panel": "Version av Panel",
     "metatags.back": "Tillbaka till kontrollpanelen",
     "metatags.files": "Webbplatsfiler",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "Sidan kan inte raderas",
     "pages.show.settings": "Inställningar för sida",
     "pages.show.preview": "Förhandsvisa sida",
     "pages.show.changeurl": "Ändra webbadress",
@@ -92,22 +92,22 @@
     "pages.add.url.close": "Stäng",
     "pages.add.url.help": "Format: gemener a-z, 0-9 och vanliga streck",
     "pages.add.template.label": "Mall",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Sidan kunde inte skapas",
     "pages.add.error.title": "Titel saknas",
     "pages.add.error.template": "Mall saknas",
     "pages.add.error.max.headline": "Nya sidor är ej tillåtet",
-    "pages.add.error.max.text": "Det maximala antalet undersidor för den här sidan har uppnåtts.",
+    "pages.add.error.max.text": "Det maximala antalet undersidor för den här sidan har nåtts.",
     "pages.url.uid.label": "Tillägg i webbadress",
     "pages.url.uid.label.option": "Skapa utifrån titel",
     "pages.url.error.exists": "En sida med samma webbadress existerar redan",
     "pages.url.error.move": "Tillägget i webbadress kan ej ändras",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.url.error.rights": "Du kan inte ändra URL:en på denna sidan",
+    "pages.url.home.error.error": "URL:en för hem- och felsidor kan inte ändras",
     "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
+    "pages.toggle.invisible": "dold",
     "pages.toggle.publish": "Är du säker på att du vill ändra sidan status till **synlig i meny?**",
     "pages.toggle.hide": "Är du säker på att du vill ändra sidan status till **dold i meny?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.error.error": "Statusen för felsidan kan inte ändras",
     "pages.delete.headline": "Vill du verkligen radera sidan?",
     "pages.delete.error.home.headline": "Startsidan kan ej raderas",
     "pages.delete.error.home.text": "Du försöker radera startsidan. Det är inte möjligt och får oönskad effekt.",
@@ -130,8 +130,8 @@
     "subpages.index.visible.help": "Dra dolda sidor hit för att sortera dem/göra dem synliga.",
     "subpages.index.invisible": "Dolda sidor (visas ej i meny)",
     "subpages.index.invisible.help": "Dra synliga sidor hit för att dölja dem.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Den här sidan kan inte ha undersidor",
+    "subpages.add.error.more": "Den här sidan kan inte ha fler undersidor",
     "subpages.error.missing": "Sidan kan ej hittas",
     "files": "Filer",
     "files.index.headline": "Filer för",
@@ -141,8 +141,8 @@
     "files.index.upload.first.button": "Ladda upp första filen",
     "files.index.edit": "Ändra",
     "files.index.delete": "Radera",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
+    "files.index.error.disabled": "Den här sidan kan inte ha några filer",
+    "files.add.error.max": "Det maximala antalet filer för den här sidan har nåtts",
     "files.add.error.extension.missing": "You cannot upload files without extension",
     "files.add.error.extension.forbidden": "Forbidden file extension",
     "files.add.error.mime.forbidden": "Forbidden mime type",
