--- a/app/translations/en/core.json
+++ b/app/translations/en/core.json
@@ -64,6 +64,7 @@
     "site.delete.error": "The site cannot be deleted",
     "pages.show.settings": "Page settings",
     "pages.show.preview": "Open preview",
+    "pages.show.template": "Change template",
     "pages.show.changeurl": "Change URL",
     "pages.show.invisible": "Status: invisible",
     "pages.show.visible": "Status: visible",
@@ -103,6 +104,7 @@
     "pages.url.error.move": "The appendix could not be changed",
     "pages.url.error.rights": "You cannot change the URL of this page",
     "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
