--- a/app/translations/en/core.json
+++ b/app/translations/en/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Password",
     "installation.signup.language.label": "Language",
     "installation.signup.button": "Create your account",
-    "login": "Login",
-    "login.welcome": "Please sign in with your new account",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Username",
     "login.password.label": "Password",
     "login.error": "Invalid username or password",
-    "login.button": "Login",
+    "login.button": "Log in",
     "login.log.error.permissions": "Login log file is not writable.",
-    "logout": "Logout",
+    "logout": "Log out",
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Pages",
