--- a/app/translations/fa/core.json
+++ b/app/translations/fa/core.json
@@ -8,13 +8,13 @@
     "delete": "حذف",
     "insert": "درج",
     "ok": "تایید",
-    "routes.error.invalid": "آدرس ",
+    "routes.error.invalid": "آدرس پنل نامعتبر است",
     "controller.error.invalid": "کنترلر نامعتبر است",
     "controller.error.action": "اقدام نامعتبر",
     "view.error.invalid": "ویو نامعتبر است",
     "options.show": "نمایش گزینه ها",
     "options.hide": "پنهان کردن گزینه ها",
-    "installation": "راه اندازی",
+    "installation": "نصب و راه اندازی",
     "installation.check.headline": "نصب و راه اندازی کربی پنل",
     "installation.check.text": "کربی در هنگام نصب با موارد زیر روبرو شده است…",
     "installation.check.retry": "تلاش مجدد",
