--- a/app/translations/pt_BR/core.json
+++ b/app/translations/pt_BR/core.json
@@ -52,7 +52,7 @@
     "dashboard.index.history.title": "Atualizações recentes",
     "dashboard.index.history.text": "Últimas páginas modificadas serão exibidas aquí para facilitar seu acesso futuro.",
     "dashboard.index.license.title": "Licença do Kirby",
-    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
+    "dashboard.index.license.text": "Parece que você está rodando o Kirby em um servidor público sem uma licença válida!\n\nPor favor, apoie o Kirby (link: {buy} text: comprando uma licença agora)\n\nCaso possua uma licença, basta adiciona-la ao seu arquivo config: (link: {docs} text: site/config/config.php)",
     "metatags": "Variáveis do site",
     "metatags.info": "Informações do Kirby",
     "metatags.license": "Licença do Kirby ",
