--- a/app/translations/en/core.json
+++ b/app/translations/en/core.json
@@ -104,6 +104,11 @@
     "pages.url.error.move": "The appendix could not be changed",
     "pages.url.error.rights": "You cannot change the URL of this page",
     "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.template.select.label" : "Template",
+    "pages.template.warning.text" : "The following fields will change, when you switch the template",
+    "pages.template.warning.removed" : "Removed fields",
+    "pages.template.warning.replaced" : "Replaced fields",
+    "pages.template.warning.added" : "Added fields",
     "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "invisible",
